# MEP_Simulation

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  analyze_run.py  analyze_run_spectra.py  csv_to_latex_summary.py  launch_run.py  main.cc  plot_output.py  plot_spectra_folder.py  rate_from_spectra_onlyRate.py  rate_from_spectra_root.py  rate_from_spectra_root_fromcsv.py  run_analyzer_spectra.sh
include/: GPD3D_ActionInitialization.hh  GPD3D_DetectorConstruction.hh  GPD3D_EventAction.hh  GPD3D_EventInfo.hh  GPD3D_FITSWriter.hh  GPD3D_GasCellHit.hh  GPD3D_GasCellSD.hh  GPD3D_IonizationTrack.hh  GPD3D_Physics.hh  GPD3D_PhysicsList.hh  GPD3D_PrimaryGeneratorAction.hh  GPD3D_RootWriter.hh  GPD3D_RunAction.hh  GPD3D_SteppingAction.hh
macros/: basic.mac  basiclong.mac  data_check.py  drawSlice.mac  template_bg_sphere.mac  template_bg_sphere_spectrum.mac  test.mac  testB.mac  testC.mac  ui.mac  vis.mac  vis_old.mac
spectra/: CXB.csv  manifest.csv  neutronAlbedo.csv  photonAlbedo.csv  primaryAlpha.csv  primaryElectrons.csv  primaryPositrons.csv  primaryProtons.csv  secondaryElectrons.csv  secondaryPositrons.csv  secondaryProtons.csv
src/: GPD3D_ActionInitialization.cc  GPD3D_DetectorConstruction.cc  GPD3D_EventAction.cc  GPD3D_FITSWriter.cc  GPD3D_GasCellHit.cc  GPD3D_GasCellSD.cc  GPD3D_IonizationTrack.cc  GPD3D_Physics.cc  GPD3D_PhysicsList.cc  GPD3D_PrimaryGeneratorAction.cc  GPD3D_RootWriter.cc  GPD3D_RunAction.cc  GPD3D_SteppingAction.cc
